styles/common/base.css
/* Variables */
:root {
  --primary-color: #4f46e5;
  --secondary-color: #059669;
  --light-color: #eef2ff;
  --light-alt-color: #d0d9f3;
  --light-secondary-color: #ecfdf5;
  --muted-color: #7e8bb3;
  --shadow-color: rgba(0, 0, 0, 0.25);
  --shadow-heavy-color: rgba(0, 0, 0, 0.75);

  --radius-xs: 6px;
  --radius-sm: 12px;

  --margin-sm: 12px;
  --margin: 24px;
  --margin-lg: 62px;
}
/* CSS Reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
::selection {
  background-color: var(--primary-color);
  color: #ffffff;
}
html {
  scroll-behavior: smooth;
  overflow-x: clip;
}
body {
  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  overflow-x: clip;
}
h1,
h2,
h3,
h4 {
  font-weight: bold;
}
h1 {
  font-size: 32px;
}
a {
  color: var(--primary-color);
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
p {
  line-height: 26px;
}
.site-header {
  background-color: var(--light-color);
  padding: 25px;
}
.site-header .container {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.site-nav ul {
  list-style-type: none;
  display: flex;
  gap: 20px;
  align-items: center;
}
.site-nav ul li {
  position: relative;
}
.site-nav ul li a {
  color: #000000;
}
.site-nav ul li a.active,
.site-nav ul li a:hover {
  color: var(--primary-color);
  font-weight: bold;
  text-decoration: none;
}
.site-nav ul li a.profile-link {
  font-size: 24px;
}
.site-nav ul li a.profile-link:hover span {
  display: block;
}
.site-nav ul li a.profile-link span {
  display: none;
  position: absolute;
  top: 40px;
  left: 50%;
  translate: -50% 0;
  background-color: #000000;
  color: #ffffff;
  font-size: 14px;
  z-index: 1;
  padding: 10px 14px;
  border-radius: var(--radius-xs);
  font-weight: bold;
  text-align: center;
  box-shadow: 0 6px 12px var(--shadow-color);
}
/* https://css-tricks.com/snippets/css/css-triangle/ */
.site-nav ul li a.profile-link span::after {
  content: "";
  display: block;
  position: absolute;
  bottom: 100%;
  left: 50%;
  translate: -50% 0;
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 5px solid #000000;
}
.site-nav ul li a:not(.profile-link).active::after,
.site-nav ul li a:not(.profile-link):hover::after {
  content: "";
  display: block;
  width: 18px;
  height: 6px;
  background-color: var(--primary-color);
  border-radius: 6px;
  position: absolute;
  left: 50%;
  translate: -50% 4px;
}
.menu-button-mobile {
  display: none;
  font-size: 24px;
}
.site-footer {
  margin-top: var(--margin-lg) !important;
  background-color: #000000;
  color: #ffffff;
  padding: 20px;
  text-align: center;
}
.form-input {
  width: 100%;
  border: 1px solid var(--light-alt-color);
  padding: 20px;
  font-family: inherit;
  border-radius: var(--radius-sm);
  outline: none;
  font-size: 20px;
  background-color: #ffffff;
}
.form-input:hover,
.form-input:focus {
  border-color: var(--primary-color);
}
.form-input:focus {
  background-color: var(--light-color);
}
.fieldset > label,
.fieldset p {
  display: block;
  margin-bottom: 6px;
  color: var(--muted-color);
}
.button {
  border: none;
  background-color: var(--primary-color);
  margin-top: var(--margin-sm);
  padding: 15px 30px;
  color: #ffffff;
  border-radius: var(--radius-sm);
  cursor: pointer;
  font-size: 18px;
  text-transform: uppercase;
  font-family: inherit;
}
.button:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}
.button:not(:disabled):hover {
  background-color: var(--secondary-color);
}
/* Mobile optimization */
@media (max-width: 768px) {
  .site-nav {
    display: none;
  }
  .menu-button-mobile {
    display: block;
  }
}

